# generations_automation_v2

./: .gitignore  CLAUDE.md  README.md  client_search.py  config.py  data_processing.py  main.py  mapping2excel.py  pyproject.toml  report_automation.py  requirements.txt  selenium_helpers.py  ui_components.py
backend/: .env.example  README.md  create_admin.py  generations_automation.db-wal  main.py  migrate_json_to_db.py  requirements.txt  schedule_config.json
backend/api/: auth.py  files.py  jobs.py  users.py
backend/automation/: client_search.py  config.py  data_processing.py  mapping_excel.py  report_automation.py  selenium_helpers.py
backend/core/: auth.py  config.py  queue.py  scheduler.py  security.py  session_manager.py
backend/db/: audit.py  crud.py  database.py  models.py
backend/models/: requests.py  responses.py
backend/workers/: automation_worker.py  tasks.py
frontend/: .env.example  .env.local  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/components/: AdminPanel.tsx  Dashboard.tsx  ManualRun.tsx  ScheduleConfig.tsx
frontend/components/wizard/: StepConfigure.tsx  StepDownload.tsx  StepLogin.tsx  StepProcess.tsx
frontend/lib/: api.ts  auth.ts
frontend/types/: next-auth.d.ts
