[project]
name = "generations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.0",
    "huey>=2.5.4",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "selenium>=4.38.0",
    "uvicorn[standard]>=0.38.0",
    "apscheduler>=3.11.1",
    "sqlalchemy>=2.0.44",
    "alembic>=1.17.1",
    "bcrypt>=5.0.0",
]
